tests/ui/traits/next-solver/opaques/report-all-unexpected-hidden-errors.stderr
error[E0700]: hidden type for `MultiUse` captures lifetime that does not appear in bounds
  --> $DIR/report-all-unexpected-hidden-errors.rs:18:19
   |
LL | type MultiUse = impl Sized;
   |                 ---------- opaque type defined here
...
LL |     let _ = || -> MultiUse {
   |                   ^^^^^^^^
   |
   = note: hidden type `Invar<'_>` captures lifetime `'_`

error[E0700]: hidden type for `MultiUse` captures lifetime that does not appear in bounds
  --> $DIR/report-all-unexpected-hidden-errors.rs:22:19
   |
LL | type MultiUse = impl Sized;
   |                 ---------- opaque type defined here
...
LL |     let _ = || -> MultiUse {
   |                   ^^^^^^^^
   |
   = note: hidden type `Invar<'_>` captures lifetime `'_`

error[E0700]: hidden type for `MultiUse` captures lifetime that does not appear in bounds
  --> $DIR/report-all-unexpected-hidden-errors.rs:27:23
   |
LL | type MultiUse = impl Sized;
   |                 ---------- opaque type defined here
...
LL |         let _ = || -> MultiUse {
   |                       ^^^^^^^^
   |
   = note: hidden type `Invar<'_>` captures lifetime `'_`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0700`.
